Created tests of Controller class